[project]
name = "notion-mcp-server"
version = "0.1.0"
description = "A Stateless Notion MCP Server"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=2.14.4",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]


[project.scripts]

### Server commands
mcp = "python notion_mcp_server.py"

### OAuth commands
notion-oauth = "python get_notion_oauth.py"

### test commands
mcp-inspector = "npx @modelcontextprotocol/inspector"

